// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPanel contains expected elements. should contains default elements in editing mode. 1`] = `
<div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Current View Settings"
  >
    <div
      data-mocked="Box"
      font-weight="bold"
      margin="{\\"bottom\\":\\"xxs\\"}"
      variant="p"
    >
      Motion indicator
    </div>
    <div
      data-mocked="Toggle"
      disabled=""
    >
      Visibility
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Scene Settings"
  >
    <div
      data-mocked="SpaceBetween"
    >
      <div
        data-mocked="FormField"
        label="Environment Preset"
      >
        <div
          data-mocked="Select"
          options="[{\\"label\\":\\"No Preset\\",\\"value\\":\\"n/a\\"},{\\"label\\":\\"Neutral\\",\\"value\\":\\"neutral\\"},{\\"label\\":\\"Directional\\",\\"value\\":\\"directional\\"},{\\"label\\":\\"Chromatic\\",\\"value\\":\\"chromatic\\"}]"
          placeholder="Choose an environment"
          selectedarialabel="Selected"
          selectedoption="{\\"label\\":\\"Neutral\\",\\"value\\":\\"neutral\\"}"
        />
      </div>
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Data Binding Template"
  >
    <scenedatabindingtemplateeditor
      valuedatabindingprovider="[object Object]"
    />
  </div>
</div>
`;

exports[`SettingsPanel contains expected elements. should contains default elements in viewing mode. 1`] = `
<div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Current View Settings"
  >
    <div
      data-mocked="Box"
      font-weight="bold"
      margin="{\\"bottom\\":\\"xxs\\"}"
      variant="p"
    >
      Motion indicator
    </div>
    <div
      data-mocked="Toggle"
      disabled=""
    >
      Visibility
    </div>
  </div>
</div>
`;

exports[`SettingsPanel contains expected elements. should contains tag settings element. 1`] = `
<div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Current View Settings"
  >
    <div
      data-mocked="Box"
      font-weight="bold"
      margin="{\\"bottom\\":\\"xxs\\"}"
      variant="p"
    >
      Motion indicator
    </div>
    <div
      data-mocked="Toggle"
      disabled=""
    >
      Visibility
    </div>
  </div>
  <div
    data-mocked="ExpandableInfoSection"
    title="Tag Settings"
  >
    <scenetagsettingseditor />
  </div>
</div>
`;
